tests/integration/snapshots/integration__install__dev_dependency_also_required_as_non_dev.snap
---
source: tests/integration/install.rs
expression: result

---
DevPackages:
  Minimal.luau: "type Package = typeof(require(\"./_Index/biff_minimal@0.1.0/minimal\"))\nreturn require(\"./_Index/biff_minimal@0.1.0/minimal\") :: Package\n"
  _Index:
    biff_minimal@0.1.0:
      minimal:
        init.lua: "return \"hey\""
ServerPackages:
  Minimal.luau: "type Package = typeof(require(\"./_Index/biff_minimal@0.1.0/minimal\"))\nreturn require(\"./_Index/biff_minimal@0.1.0/minimal\") :: Package\n"
  OneDependency.luau: "type Package = typeof(require(\"./_Index/biff_one-dependency@0.1.0/one-dependency\"))\nreturn require(\"./_Index/biff_one-dependency@0.1.0/one-dependency\") :: Package\n"
  Transitive.luau: "type Package = typeof(require(\"./_Index/biff_transitive-dependency@0.1.0/transitive-dependency\"))\nreturn require(\"./_Index/biff_transitive-dependency@0.1.0/transitive-dependency\") :: Package\n"
  _Index:
    biff_minimal@0.1.0:
      minimal:
        init.lua: "return \"hey\""
    biff_one-dependency@0.1.0:
      Minimal.luau: "type Package = typeof(require(\"../biff_minimal@0.1.0/minimal\"))\nreturn require(\"../biff_minimal@0.1.0/minimal\") :: Package\n"
      one-dependency:
        init.lua: "return \"hey\""
    biff_transitive-dependency@0.1.0:
      OneDependency.luau: "type Package = typeof(require(\"../biff_one-dependency@0.1.0/one-dependency\"))\nreturn require(\"../biff_one-dependency@0.1.0/one-dependency\") :: Package\n"
      transitive-dependency:
        init.lua: "return \"hey\""
default.project.json: "{\n\t\"name\": \"dev-dependency\",\n\t\"tree\": {\n\t\t\"$path\": \"src\"\n\t}\n}"
src:
  init.luau: "local Minimal = require(script.Parent.Minimal)\n\nreturn function()\n\tprint(Minimal)\nend"
wally.lock: "# This file is automatically @generated by Wally.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"biff/dev-dependency-also-required-as-non-dev\"\nversion = \"0.1.0\"\ndependencies = [\n\t[\"Transitive\", \"biff/transitive-dependency@0.1.0\"],\n\t[\"Minimal\", \"biff/minimal@0.1.0\"],\n]\n\n[[package]]\nname = \"biff/minimal\"\nversion = \"0.1.0\"\ndependencies = []\n\n[[package]]\nname = \"biff/one-dependency\"\nversion = \"0.1.0\"\ndependencies = [\n\t[\"Minimal\", \"biff/minimal@0.1.0\"],\n]\n\n[[package]]\nname = \"biff/transitive-dependency\"\nversion = \"0.1.0\"\ndependencies = [\n\t[\"OneDependency\", \"biff/one-dependency@0.1.0\"],\n]\n\n"
wally.toml: "[package]\nname = \"biff/dev-dependency-also-required-as-non-dev\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\n\n[place]\nserver-packages = \"game.ServerScriptStorage.Packages\"\n\n[server-dependencies]\nTransitive = \"biff/transitive-dependency@0.1.0\"\n\n[dev-dependencies]\nMinimal = \"biff/minimal@0.1.0\"\n"

