tests/integration/snapshots/integration__install__manifest_links.snap
---
source: tests/integration/install.rs
expression: result
---
default.project.json: "{\n  \"name\": \"minimal\",\n  \"tree\": {\n    \"$path\": \"src\"\n  }\n}"
src:
  init.luau: "return \"hey\"\n"
wally.lock: "# This file is automatically @generated by Wally.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"biff/minimal\"\nversion = \"0.1.0\"\ndependencies = []\n\n"
wally.toml: "[package]\nname = \"biff/minimal\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/primary-registry\"\nrepository = \"https://github.com/UpliftGames/player-module.git\"\nhomepage = \"https://github.com/UpliftGames/player-module\"\n"
