tests/integration/snapshots/integration__install__private_with_public_dependency.snap
---
source: tests/integration/install.rs
expression: result

---
ServerPackages:
  Minimal.luau: "type Package = typeof(require(\"./_Index/biff_minimal@0.1.0/minimal\"))\nreturn require(\"./_Index/biff_minimal@0.1.0/minimal\") :: Package\n"
  _Index:
    biff_minimal@0.1.0:
      minimal:
        init.lua: "return \"hey\""
default.project.json: "{\n\t\"name\": \"private-with-public-dependency\",\n\t\"tree\": {\n\t\t\"$path\": \"src\"\n\t}\n}"
src:
  init.luau: "return \"I'm private\""
wally.lock: "# This file is automatically @generated by Wally.\n# It is not intended for manual editing.\nregistry = \"test\"\n\n[[package]]\nname = \"biff/minimal\"\nversion = \"0.1.0\"\ndependencies = []\n\n[[package]]\nname = \"private/private-with-public-dependency\"\nversion = \"0.1.0\"\ndependencies = [\n\t[\"Minimal\", \"biff/minimal@0.1.0\"],\n]\n\n"
wally.toml: "[package]\nname = \"private/private-with-public-dependency\"\nversion = \"0.1.0\"\nlicense = \"MIT\"\nrealm = \"server\"\nregistry = \"test-registries/tertiary-registry\"\n\n[server-dependencies]\nMinimal = \"biff/minimal@0.1.0\""

